Full Ship Command System in place. Full Business System in place. Placeholders for Tutorials. Easy to create Tutorials have been implemented.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -162,7 +162,7 @@
               </ion-row>
               <ion-row>
                 <ion-col>
-                  <p>Copyright &#169; 2022 Universe Trader | Space Sim Game | Game Version {{aAM.version}} | {{projectName}}</p>
+                  <p>Copyright &#169; 2022 Universe Trader | Space Sim Game | Game Version {{aAM.version}}<span *ngIf="projectName === 'development'"> | {{projectName}}</span></p>
                 </ion-col>
               </ion-row>
             </ion-grid>
