--- a/src/app/dashboard/dashboard.page.html
+++ b/src/app/dashboard/dashboard.page.html
@@ -5,7 +5,7 @@
     </ion-buttons>
     <ion-title>Dashboard</ion-title>
     <ion-buttons slot="end">
-      <ion-button (click)="viewTutorial()">
+      <ion-button (click)="globalS.viewTutorial('dashboard')">
         <ion-icon name="bulb-outline"></ion-icon>Tutorial
       </ion-button>
     </ion-buttons>
