--- a/src/app/price-list/price-list.page.html
+++ b/src/app/price-list/price-list.page.html
@@ -4,6 +4,11 @@
       <ion-menu-button></ion-menu-button>
     </ion-buttons>
     <ion-title>Price List - Work in Progress</ion-title>
+    <ion-buttons slot="end">
+      <ion-button (click)="globalS.viewTutorial('priceList')">
+        <ion-icon name="bulb-outline"></ion-icon>Tutorial
+      </ion-button>
+    </ion-buttons>
   </ion-toolbar>
 </ion-header>
 
