--- a/src/app/universe/universe.page.html
+++ b/src/app/universe/universe.page.html
@@ -4,6 +4,11 @@
       <ion-menu-button></ion-menu-button>
     </ion-buttons>
     <ion-title>Universe</ion-title>
+    <ion-buttons slot="end">
+      <ion-button (click)="globalS.viewTutorial('universe')">
+        <ion-icon name="bulb-outline"></ion-icon>Tutorial
+      </ion-button>
+    </ion-buttons>
   </ion-toolbar>
   <ion-segment [(ngModel)]="nsTab">
     <ion-segment-button value="solarSystems">
@@ -163,7 +168,12 @@
         </ion-row>
         <ion-row *ngFor="let solarBody of aFilteredSolarBodies">
           <ion-col *ngFor="let col of aSolarBodiesTable">
-            {{solarBody[col.filter]}}
+            <span *ngIf="col.filter === 'solarBodyType' && solarBody[col.filter] === 'asteroidField'; else singleWord">
+              asteroid field
+            </span>
+            <ng-template #singleWord>
+              {{solarBody[col.filter]}}
+            </ng-template>
           </ion-col>
           <ion-col><ion-button (click)="viewSolarBody(solarBody)">View</ion-button></ion-col>
         </ion-row>
