--- a/src/app/ships/ship-orders-modal/ship-orders-modal.page.html
+++ b/src/app/ships/ship-orders-modal/ship-orders-modal.page.html
@@ -20,123 +20,166 @@
     <ion-card-content>
       <ion-grid>
         <ion-row>
-          <ion-col size="1">
-            Rearrange
-          </ion-col>
-          <ion-col size="1">
-            Command Order
-          </ion-col>
-          <ion-col size="1">
-            Type
-          </ion-col>
-          <ion-col>
-            Settings
-          </ion-col>
-          <ion-col>
-            Remove
-          </ion-col>
+          <ion-col size="1">Rearrange</ion-col>
+          <ion-col size="1">Command Order</ion-col>
+          <ion-col size="1">Type</ion-col>
+          <ion-col>Settings</ion-col>
+          <ion-col>Remove</ion-col>
         </ion-row>
 
         <ion-reorder-group (ionItemReorder)="doReorder($event)" disabled="false">
-        <ion-row *ngFor="let aOrder of aOrders; let i = index" [ngClass]="(i % 2 === 0) ? 'odd-row' : 'even-row'">
-          <ion-col size="1">
-            <ion-reorder></ion-reorder>
-          </ion-col>
-          <ion-col size="1">
-            {{i + 1}}
-          </ion-col>
-          <ion-col size="1">
-            <ion-item>
-              <ion-label position="floating">Order</ion-label>
-              <ion-select [(ngModel)]="aOrder.type">
-                <ion-select-option value="travel">Travel</ion-select-option>
-                <ion-select-option value="buy">Buy</ion-select-option>
-                <ion-select-option value="sell">Sell</ion-select-option>
-              </ion-select>
-            </ion-item>
-          </ion-col>
+          <ion-row *ngFor="let aOrder of aOrders; let i = index" [ngClass]="(i % 2 === 0) ? 'odd-row' : 'even-row'">
+            <ion-col size="1">
+              <ion-reorder></ion-reorder>
+            </ion-col>
+            <ion-col size="1">
+              {{i + 1}}
+            </ion-col>
+            <ion-col size="1">
+              <ion-item>
+                <ion-label position="floating">Order</ion-label>
+                <ion-select [(ngModel)]="aOrder.type">
+                  <ion-select-option value="travel">Travel</ion-select-option>
+                  <ion-select-option value="buy">Buy</ion-select-option>
+                  <ion-select-option value="sell">Sell</ion-select-option>
+                  <ion-select-option value="transfer">Transfer with Warehouse</ion-select-option>
+                  <ion-select-option value="extract">Mine</ion-select-option>
+                </ion-select>
+              </ion-item>
+            </ion-col>
 
-          <ion-col>
-            <span *ngIf="aOrder.type === 'travel'">
-              <ion-grid>
-                <ion-row>
-                  <ion-col>
-                    <ion-item>
-                      <ion-label position="floating">Solar System: {{aOrder.destSSName}}</ion-label>
-                      <ion-select
-                        name="solar_system"
-                        [(ngModel)]="aOrder.aDestSS"
-                        (ngModelChange)="readSSSolarBodies(aOrder.aDestSS); aOrder.destSSName= aOrder.aDestSS.name"
-                        class="solar-system-select"
-                        [interfaceOptions]="{'cssClass':'wider-popover'}"
-                      >
-                        <ion-select-option *ngFor="let solarSystem of aUniverse | async" [value]="solarSystem">
-                          {{solarSystem.name}}: {{solarSystem.xCoordinate}}, {{solarSystem.yCoordinate}}
-                        </ion-select-option>
+            <ion-col>
+              <span *ngIf="aOrder.type === 'travel'">
+                <ion-grid>
+                  <ion-row>
+                    <ion-col>
+                      <ion-item>
+                        <ion-label position="floating">Solar System: {{aOrder.destSSName}}</ion-label>
+                        <ion-select
+                          name="solar_system"
+                          [(ngModel)]="aOrder.aDestSS"
+                          (ngModelChange)="readSSSolarBodies(aOrder.aDestSS); aOrder.destSSName= aOrder.aDestSS.name"
+                          class="solar-system-select"
+                          [interfaceOptions]="{'cssClass':'wider-popover'}"
+                        >
+                          <ion-select-option *ngFor="let solarSystem of aUniverse | async" [value]="solarSystem">
+                            {{solarSystem.name}}: {{solarSystem.xCoordinate}}, {{solarSystem.yCoordinate}}
+                          </ion-select-option>
+                        </ion-select>
+                      </ion-item>
+                    </ion-col>
+                    <ion-col>
+                      <ion-item>
+                        <ion-label position="floating">Solar Body: {{aOrder.destSBName}}</ion-label>
+                        <ion-select
+                          name="solar_body"
+                          [(ngModel)]="aOrder.aDestSB"
+                          (ngModelChange)="aOrder.destSBName= aOrder.aDestSB.name"
+                          class="solar-system-select"
+                          [interfaceOptions]="{'cssClass':'wider-popover'}"
+                        >
+                          <ion-select-option *ngFor="let solarBody of aSolarBodies | async" [value]="solarBody">
+                            {{solarBody.name}}: {{solarBody.xCoordinate}}, {{solarBody.yCoordinate}}
+                          </ion-select-option>
+                        </ion-select>
+                      </ion-item>
+                    </ion-col>
+                  </ion-row>
+                </ion-grid>
+              </span>
+              <span *ngIf="aOrder.type === 'buy' || aOrder.type === 'sell'">
+                <ion-grid>
+                  <ion-row>
+                    <ion-col>
+                      <ion-item>
+                        <ion-label position="floating">Item</ion-label>
+                        <ion-select
+                          name="solar_system"
+                          [(ngModel)]="aOrder.item"
+                        >
+                        <!--
+                          <ion-select-option *ngFor="let aItem of aUniverse | async" [value]="aItem.name">
+                            {{aItem.displayName}}
+                          </ion-select-option>
+                        -->
+                        <ion-select-option value="power">Power</ion-select-option>
+                        <ion-select-option value="mre">MRE</ion-select-option>
+                        <ion-select-option value="ore">Ore</ion-select-option>
+                        <ion-select-option value="silicone">Silicone</ion-select-option>
+                        <ion-select-option value="metal">Metal</ion-select-option>
+                        <ion-select-option value="electronics">Electronics</ion-select-option>
                       </ion-select>
-                    </ion-item>
-                  </ion-col>
-                  <ion-col>
-                    <ion-item>
-                      <ion-label position="floating">Solar Body: {{aOrder.destSBName}}</ion-label>
-                      <ion-select
-                        name="solar_body"
-                        [(ngModel)]="aOrder.aDestSB"
-                        (ngModelChange)="aOrder.destSBName= aOrder.aDestSB.name"
-                        class="solar-system-select"
-                        [interfaceOptions]="{'cssClass':'wider-popover'}"
-                      >
-                        <ion-select-option *ngFor="let solarBody of aSolarBodies | async" [value]="solarBody">
-                          {{solarBody.name}}: {{solarBody.xCoordinate}}, {{solarBody.yCoordinate}}
-                        </ion-select-option>
-                      </ion-select>
-                    </ion-item>
-                  </ion-col>
-                </ion-row>
-              </ion-grid>
-            </span>
-            <span *ngIf="aOrder.type === 'buy' || aOrder.type === 'sell'">
-              <ion-grid>
-                <ion-row>
-                  <ion-col>
-                    <ion-item>
-                      <ion-label position="floating">Item</ion-label>
-                      <ion-select
-                        name="solar_system"
-                        [(ngModel)]="aOrder.item"
-                      >
-                      <!--
-                        <ion-select-option *ngFor="let aItem of aUniverse | async" [value]="aItem.name">
-                          {{aItem.displayName}}
-                        </ion-select-option>
-                      -->
-                      <ion-select-option value="power">Power</ion-select-option>
-                      <ion-select-option value="mre">MRE</ion-select-option>
-                      <ion-select-option value="ore">Ore</ion-select-option>
-                      <ion-select-option value="silicone">Silicone</ion-select-option>
-                      <ion-select-option value="metal">Metal</ion-select-option>
-                      <ion-select-option value="electronics">Electronics</ion-select-option>
-                    </ion-select>
-                    </ion-item>
-                  </ion-col>
-                  <ion-col>
-                    <ion-item>
-                      <ion-label position="floating">
-                        Amount
-                      </ion-label>
-                      <ion-input type="number" [max]="shipS.capacityAvailable" [(ngModel)]="aOrder.quantity"></ion-input>
-                    </ion-item>
-                  </ion-col>
-                </ion-row>
-              </ion-grid>
-            </span>
-          </ion-col>
-          <ion-col>
-            <ion-button (click)="deleteOrder(aOrder.id)" color="danger">
-              Delete Order
-            </ion-button>
-          </ion-col>
-        </ion-row>
+                      </ion-item>
+                    </ion-col>
+                    <ion-col>
+                      <ion-item>
+                        <ion-label position="floating">
+                          Amount
+                        </ion-label>
+                        <ion-input type="number" [max]="shipS.capacityAvailable" [(ngModel)]="aOrder.quantity"></ion-input>
+                      </ion-item>
+                    </ion-col>
+                  </ion-row>
+                </ion-grid>
+              </span>
+              <span *ngIf="aOrder.type === 'transfer'">
+                <ion-grid>
+                  <ion-row>
+                    <ion-col>
+                      <ion-item>
+                        <ion-label position="floating">Pickup/Drop Off</ion-label>
+                        <ion-select name="subType" [(ngModel)]="aOrder.subType">
+                          <ion-select-option value="pickup">Pickup</ion-select-option>
+                          <ion-select-option value="dropOff">Drop Off</ion-select-option>
+                        </ion-select>
+                      </ion-item>
+                    </ion-col>
+                    <ion-col>
+                      <ion-item>
+                        <ion-label position="floating">Item</ion-label>
+                        <ion-select name="item" [(ngModel)]="aOrder.item">
+                          <ion-select-option value="power">Power</ion-select-option>
+                          <ion-select-option value="mre">MRE</ion-select-option>
+                          <ion-select-option value="ore">Ore</ion-select-option>
+                          <ion-select-option value="silicone">Silicone</ion-select-option>
+                          <ion-select-option value="metal">Metal</ion-select-option>
+                          <ion-select-option value="electronics">Electronics</ion-select-option>
+                        </ion-select>
+                      </ion-item>
+                    </ion-col>
+                    <ion-col>
+                      <ion-item>
+                        <ion-label position="floating">
+                          Amount
+                        </ion-label>
+                        <ion-input type="number" [max]="shipS.capacityAvailable" [(ngModel)]="aOrder.quantity"></ion-input>
+                      </ion-item>
+                    </ion-col>
+                  </ion-row>
+                </ion-grid>
+              </span>
+              <span *ngIf="aOrder.type === 'extract'">
+                <ion-grid>
+                  <ion-row>
+                    <ion-col>
+                      <ion-item>
+                        <ion-label position="floating">Item</ion-label>
+                        <ion-select name="item" [(ngModel)]="aOrder.item">
+                          <ion-select-option value="ore">Ore</ion-select-option>
+                          <ion-select-option value="silicone">Silicone</ion-select-option>
+                        </ion-select>
+                      </ion-item>
+                    </ion-col>
+                  </ion-row>
+                </ion-grid>
+              </span>
+            </ion-col>
+            <ion-col>
+              <ion-button (click)="deleteOrder(aOrder.id)" color="danger">
+                Delete Order
+              </ion-button>
+            </ion-col>
+          </ion-row>
         </ion-reorder-group>
       </ion-grid>
 
