--- a/src/app/stations/station/station.page.html
+++ b/src/app/stations/station/station.page.html
@@ -5,6 +5,9 @@
     </ion-buttons>
     <ion-title>Station</ion-title>
     <ion-buttons slot="end" *ngIf="isModal">
+      <ion-button (click)="globalS.viewTutorial('station')">
+        <ion-icon name="bulb-outline"></ion-icon>Tutorial
+      </ion-button>
       <ion-button color="danger" fill="solid" (click)="dismissModal()">Exit</ion-button>
     </ion-buttons>
     <ion-segment [(ngModel)]="nsTab">
