--- a/src/app/businesses/business-creation/business-creation.page.html
+++ b/src/app/businesses/business-creation/business-creation.page.html
@@ -74,8 +74,13 @@
                 <ion-row>
                   <ion-col *ngFor="let aRequirement of aStructure.construction">
                     <ion-item>
-                      <ion-note slot="helper">{{aRequirement.name}}</ion-note>
-                      <ion-label>{{aRequirement.amount | number}} <ion-icon *ngIf="aRequirement.name === 'labor'" src="assets/icon/PulsarCreditSymbol.svg"></ion-icon></ion-label>
+                      <ion-note slot="helper" *ngIf="aRequirement.itemID !== 'labor'; else labor">
+                        {{ss.aaDefaultItems[aRequirement.itemID].displayName}}
+                      </ion-note>
+                      <ng-template #labor>
+                        <ion-note slot="helper">{{aRequirement.itemID}}</ion-note>
+                      </ng-template>
+                      <ion-label>{{aRequirement.amount | number}} <ion-icon *ngIf="aRequirement.itemID === 'labor'" src="assets/icon/PulsarCreditSymbol.svg"></ion-icon></ion-label>
                     </ion-item>
                   </ion-col>
                 </ion-row>
