--- a/src/app/stations/station/station-operations/station-operations.page.html
+++ b/src/app/stations/station/station-operations/station-operations.page.html
@@ -30,8 +30,7 @@
               </ion-item>
             </ion-col>
             <ion-col>
-              <ion-button (click)="viewOperationModal(aOperation)">Enter</ion-button>
-              <ion-button (click)="viewOperationModalTwo(aOperation)">Enter Two</ion-button>
+              <ion-button (click)="viewOperationModalTwo(aOperation)">Enter</ion-button>
             </ion-col>
           </ion-grid>
         </ion-col>
